--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,34 @@
-main:
-  image: jwilder/nginx-proxy@sha256:4e6bae63dab0c4d3ebf3bbecbf5cd2700ca99db02e155efaa6e28baa14033bc8
-  ports:
-    - "80:80"
-    - "443:443"
-  volumes:
-    - ./htpasswd:/etc/nginx/htpasswd
-    - ./certs:/etc/nginx/certs:ro
-    - /etc/nginx/vhost.d
-    - /usr/share/nginx/html
-    - /var/run/docker.sock:/tmp/docker.sock:ro
-  labels:
-    - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
-  restart: unless-stopped
+version: "2.1"
 
-letsencrypt:
-  image: jrcs/letsencrypt-nginx-proxy-companion@sha256:b4ea30c189945da869a3450b8211a20ba8cddb2b24d9df7451ff7350430a0e72
-  volumes:
-    - ./certs:/etc/nginx/certs:rw
-    - /var/run/docker.sock:/var/run/docker.sock:ro
-  volumes_from:
-    - main
-  restart: unless-stopped
+services:
+  main:
+    image: jwilder/nginx-proxy@sha256:4e6bae63dab0c4d3ebf3bbecbf5cd2700ca99db02e155efaa6e28baa14033bc8
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./htpasswd:/etc/nginx/htpasswd
+      - ./certs:/etc/nginx/certs:ro
+      - /etc/nginx/vhost.d
+      - /usr/share/nginx/html
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+    networks:
+      - nginx-proxy
+    labels:
+      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
+    restart: unless-stopped
+
+  letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion@sha256:b4ea30c189945da869a3450b8211a20ba8cddb2b24d9df7451ff7350430a0e72
+    volumes:
+      - ./certs:/etc/nginx/certs:rw
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    volumes_from:
+      - main
+    networks:
+      - nginx-proxy
+    restart: unless-stopped
+
+networks:
+  nginx-proxy:
+    name: nginx-proxy
