--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,34 +2,38 @@ version: "2.1"
 
 services:
   main:
-    image: jwilder/nginx-proxy@sha256:4116f2b6fb9b2a41d94149e8261c81ebbfd96aa84882d87f19c45e00a7c3c221
+    image: nginxproxy/nginx-proxy:1.0.1
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ./htpasswd:/etc/nginx/htpasswd
-      - ./certs:/etc/nginx/certs:ro
-      - /etc/nginx/vhost.d
-      - /usr/share/nginx/html
+      - certs:/etc/nginx/certs
+      - vhost:/etc/nginx/vhost.d
+      - html:/usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
     networks:
       - nginx-proxy
-    labels:
-      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
     restart: unless-stopped
 
   letsencrypt:
-    image: jrcs/letsencrypt-nginx-proxy-companion@sha256:f7ec0b1a7446f7781e2dcaadfbe46e5ba0832b7f4ffd8ea7ac2532c111df8477
+    image: nginxproxy/acme-companion:2.2.1
     environment:
-      DEFAULT_EMAIL: 
+      DEFAULT_EMAIL: ${LETSENCRYPT_EMAIL}
     volumes:
-      - ./certs:/etc/nginx/certs:rw
+      - acme:/etc/acme.sh
       - /var/run/docker.sock:/var/run/docker.sock:ro
     volumes_from:
       - main
     networks:
       - nginx-proxy
     restart: unless-stopped
+
+volumes:
+  certs:
+  vhost:
+  html:
+  acme:
 
 networks:
   nginx-proxy:
